# ADAGIO

./: README.md  read.cpp  voxelisation.cpp
Marching/: CMakeLists.txt  functions.cpp  main.cpp  prog.h
Mesh/: bunny100.txt  not.camel50.txt
Verify/: CMakeLists.txt  main.cpp
Voxelisation/: CMakeLists.txt  functions.cpp  main.cpp  pointMarching.off  prog.h  read.cpp
